# Chess

./: CMakeLists.txt  Moves.db  README.md  classes.h  constants.h  funcs.c  funcs.h  game  main.c  makefile  rules.c
Assets/Visual/Pieces/: credit1.txt
Assets/Visual/Pieces/Pngs/setsComparison/: Set1.png,  Set2.png,
Src/: boardHelper.c  bot.c  botHelper.c  bots.c  constants.c  constants.h  funcs.c  funcs.h  game  main.c  makefile  moveRules.c  movesSDK.c  rules.c  setBoard.c  sounds.c
Src/Linkers/: boardHelper.h  bot.h  bots.h  classes.h  constants.h  funcs.h  movesSDK.h  rules.h  setBoard.h  sounds.h
assets/audio/sound/: credit.txt
src/: CMakeLists.txt  main.c
